--- a/marxan.Rmd
+++ b/marxan.Rmd
@@ -19,28 +19,26 @@ knitr::opts_chunk$set(echo = TRUE,
 
 # Introduction
 
-## Marxan
+Designing reserve networks requires considering both ecological and socioeconomic factors. Marxan is a commonly used spatial planning tool that quantifies these factors to generate efficient reserve networks. Here, we will use species and parcel data from a 2014-15 Bren Group Project in the Morro Bay Watershed to examine the optimate regional reserve network.
 
-Marxan is a commonly used spatial planning tool. 
+### Priotitizr
 
-## Priotitizr
+`Prioritizr` is an R package that, like Marxan, can guide systematic reserve design by solving conservation prioritization problems. In this tutorial, we will be using the `marxan_problem()` function which can read Marxan input data. More information on the `prioritizr` package can be found at https://mran.microsoft.com/snapshot/2018-03-04/web/packages/prioritizr/vignettes/prioritizr_basics.html. 
 
-Information on the `prioritizr` package can be found at https://mran.microsoft.com/snapshot/2018-03-04/web/packages/prioritizr/vignettes/quick_start.html. 
+A really useful tutorial in using prioritizr, specifically in using summed solutions, can be found here: https://cran.r-project.org/web/packages/prioritizr/vignettes/tasmania.html. This resource helped frame this tutorial. 
 
-A really useful example for summed solutions is under "Selection Frequencies" here: https://cran.r-project.org/web/packages/prioritizr/vignettes/tasmania.html 
-
-## Gurobi
+### Gurobi
 
 For the `solve()` function, you must have a solver installed. For the the process with summing and multiple runs process, this must be `gurobi`. This requires following the instructions below.  
 
 1. Download gurobi (https://www.gurobi.com/downloads/gurobi-optimizer-eula/)
 2. Request an academic license (https://www.gurobi.com/downloads/end-user-license-agreement-academic/)
 2. Verify license in terminal by copying and pasting information in your acount > your licenses
-3. Must install r package with`install.packages('/Library/gurobi902/mac64/R/gurobi_9.0-2_R_3.6.1.tgz', repos=NULL)` (if on a mac and downloaded the most recent version of gurobi, don't download newest version of R! (4.0.0)).
+3. Must install r package with`install.packages('/Library/gurobi902/mac64/R/gurobi_9.0-2_R_3.6.1.tgz', repos=NULL)` (if on a mac and downloaded the most recent version of gurobi, don't download newest version of R! (4.0.0; at least as of 5/2020 this was not functional)).
 4. must install slam package with `install.packages("slam")
 5. add gurobi and slam libraries
 
-## Data
+### Data
 
 We will be using a case study (and the data they prepared) from a past group project on the Morro Bay National Estuary Program.
 
@@ -60,7 +58,7 @@ We will be using a case study (and the data they prepared) from a past group pro
 
 # Getting started
 
-## Attach packages
+### Attach packages
 
 ```{r}
 library(here)
@@ -79,11 +77,11 @@ If you do not have any of these packages installed, run the following in the con
 
 Note: this will not work for installing `gurobi`. Instructions are in the introduction section. 
 
-## Read in data
+### Read in data
 
 All .csv files in this tutorial are unaltered from the .xlsx files provided in the R drive. They have only been renamed and saved as csvs. The "data" folder is identical to the MorroBay_data folder provided in the R drive, it has only been renamed. 
 
-### Species and pu information
+#### Species and pu information
 
 ```{r}
 spec <- read_csv(here("data", "morro-bay-spec.csv")) %>% 
@@ -102,7 +100,7 @@ status <- read_csv(here("data", "spec-name-status.csv")) %>%
   head(140)
 ```
 
-### Polygons
+#### Polygons
 
 ```{r}
 parcels <- read_sf(dsn = here("data"), layer = "MorroBay_parcels") %>% 
@@ -114,14 +112,18 @@ ggplot(data = parcels) +
 
 # Analyze all species
 
-## Run Marxan
+### Run Marxan
 
 The function `marxan_problem()` in the `prioritizr` package gives us the "canned" approach that works for our purposes. If more customizations are desired, feel free to explore the `problem()` function instead. 
 
-Note the following parameters: 
+Arguments for `marxan_problem` (for more information, see `?marxan_problem`):
 
-* No boundary length (`blm = 0`)
-* Number of runs = 100 (`number_solutions = 100`)
+* x: planning units to use in reserve design and their cost (`x = pu`)
+* spec: conservation features. Must contain columns for id, name, and prop/amount (`spec = spec`)
+* puvspr: the amount of each feature in each planning unit. Must contain columns for pu, species, and amount. (`puvspr = puvsp`)
+* bound: boundary data (we will not use this; `bound = NULL`)
+
+Also note that in solver, we will use 100 runs (`number_solutions = 100`)
 
 ```{r}
 marxan_1 <- marxan_problem(x = pu,
@@ -133,25 +135,27 @@ marxan_1 <- marxan_problem(x = pu,
 marxan_1_problem <- marxan_1 %>% 
   add_gurobi_solver(gap = 0.15) %>% 
   add_pool_portfolio(method = 2, number_solutions = 100) 
-# see gap meaning under ?add_gurobi_solver: 0.15 gives us results closest to that of using marxan software
-# see method meaning under ?add_pool_portfolio
+# gap = optimality gap. 0.15 gives us results closest to that of using marxan software. Learn more under ?add_gurobi_solver 
+# method 2 finds a specified number of solutions that are nearest to optimatelity. Learn more under ?add_pool_portfolio
 
 marxan_1_soln <- solve(marxan_1_problem)
 ```
 
-## Sum solutions
+### Sum solutions
 
 ```{r}
 marxan_1_ssoln <- marxan_1_soln %>% 
   mutate(sum = rowSums(.[6:105])) %>% 
   select(id, cost, status, locked_in, locked_out, sum)
 
-hist(marxan_1_ssoln$sum)
+hist(marxan_1_ssoln$sum,
+     main = "Selection Frequencies",
+     xlab = "Number of runs unit was selected")
 ```
 
-## Create map
+### Create map
 
-### Join polygons with output
+#### Join polygons with output
 
 ```{r}
 parcels_marxan_1 <- inner_join(parcels, marxan_1_ssoln, by = "id")
@@ -166,7 +170,7 @@ ggplot(data = parcels_marxan_1) +
   theme_minimal()
 ```
 
-### Add basemap
+#### Add basemap
 
 This step is optional, but will make your map look better and is good to learn for further spatial analyses in R. Unfortunately, the options for basemaps in R are limited. Here, I have used the `ggmaps` package because it is the most accessible, however, it is still not very accessible compared to other R packages.
 
@@ -203,7 +207,7 @@ all_spec
 
 # Analyze endangered species
 
-## Create dataframes
+### Create dataframes
 
 Here we create spec and puvsp data frames similar to those we had for all species, but containing only endangered or threatened species.
 
@@ -226,7 +230,7 @@ end_puvsp <- merge(end_status, puvsp_id, by = "id") %>%
   rename("species" = "id")
 ```
 
-## Run Marxan
+### Run Marxan
 
 Note the following parameters (same as for all species): 
 
@@ -249,19 +253,21 @@ marxan_end_problem <- marxan_end %>%
 marxan_end_soln <- solve(marxan_end_problem)
 ```
 
-## Sum solutions
+### Sum solutions
 
 ```{r}
 marxan_end_ssoln <- marxan_end_soln %>% 
   mutate(sum = rowSums(.[6:105])) %>% 
   select(id, cost, status, locked_in, locked_out, sum)
 
-hist(marxan_end_ssoln$sum)
+hist(marxan_end_ssoln$sum,
+     main = "Selection frequencies",
+     xlab = "Number of runs units were selected")
 ```
 
-## Create map
+### Create map
 
-### Join polygons with output
+#### Join polygons with output
 
 ```{r}
 parcels_marxan_end <- inner_join(parcels, marxan_end_ssoln, by = "id")
@@ -276,7 +282,7 @@ ggplot(data = parcels_marxan_end) +
   theme_minimal()
 ```
 
-### Add basemap
+#### Add basemap
 
 ```{r}
 end_spec <- 
